# test

./: README.md  Test.ipynb  _config.yml  foo.txt  index.md  pyproject.toml  requirements.txt  test.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: python-tests.yml
tests/: test.ipynb
