[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = "--nbmake"

[dependency-groups]
dev = [
    "nbmake>=1.5.5",
    "pytest>=9.0.2",
]
